fix layout alignment for pages + add contacts

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -253,6 +253,12 @@ figcaption {
         border-right: 0px;
     }
 
+    section.page > .logo {
+        font-size: 1em;
+        padding-bottom: 0;
+        margin: 0;
+    }
+
     .photos ul {
         margin-top: 0.5rem;
     }
